@@ -1,3 +1,9 @@
+2009-04-09  Mark Ellis  <mark@mpellis.org.uk>
+
+	* use synce_info_get_ functions to obtain SynceInfo parameters;
+	  new rapi_connection_get_ functions to give access to SynceInfo
+	* allow access to rapi conn through python object
+
 2009-03-27  Mark Ellis  <mark@mpellis.org.uk>
 
 	* enhance pyrapi2 registry query_value, some small fixes
